--- a/styles.css
+++ b/styles.css
@@ -158,3 +158,15 @@ img {
     font-size: 20px;
     margin-top: 20px;
 }
+
+/* Simulation Page */
+
+.interactive-content{
+    width: 800px;
+    margin: 0 auto;
+}
+
+#webgl{
+    width: 100%;
+    height: 100%;
+}
